# efficientv2-unet

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  Tensorflow_env_installs.txt  env_20231220.yml  env_20240124.yml  main.py  playground.py  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
efficient_v2_unet/: __main__.py  cli.py  version.py
efficient_v2_unet/model/: __init__.py  efficient_v2_unet.py  metrics.py  predict.py
efficient_v2_unet/utils/: data_generation.py
misc/: Tensorflow_env_installs.txt  main.py  pip_requirements_misses_nonPIPinstalls.txt  playground.py
notebooks/: 1-1_train_notebook.ipynb  1-2_split_data_and_train.ipynb  2-predict.ipynb  make_model_plots.ipynb
resources/test_files/: stitch_test_image.pptx  stitch_test_image.tif
src/efficientUNet/model/: efficient_unet.py  metrics.py  predict.py
src/efficientUNet/utils/: data_generation.py  visualize.py
src/efficient_v2_unet/: __init__.py  __main__.py  version.py
src/efficient_v2_unet/model/: efficient_v2_unet.py  metrics.py  predict.py
src/efficient_v2_unet/utils/: data_generation.py  data_generation_old.py
src/efficientv2_unet/: __main__.py  cli.py  version.py
src/efficientv2_unet/model/: __init__.py  efficientv2_unet.py  metrics.py  predict.py
src/efficientv2_unet/utils/: __init__.py  tile_utils.py  visualize.py
tests/: test_cli.py  test_predict.py
